Fix two vertical scrollbars in dxDiagram

--- a/styles/widgets/generic/diagram.generic.less
+++ b/styles/widgets/generic/diagram.generic.less
@@ -44,7 +44,7 @@
     }
     // stylelint-enable selector-class-pattern
 
-    .dx-diagram-toolbar-wrapper:first-child {
+    .dx-diagram-toolbar-wrapper {
         border-bottom: 1px solid @diagram-toolbar-border-color;
     }
 
