--- a/styles/widgets/ios7/diagram.ios7.less
+++ b/styles/widgets/ios7/diagram.ios7.less
@@ -14,7 +14,7 @@
 @DIAGRAM_TOOLBAR_COLORBUTTON_BORDER_WIDTH: 3px;
 
 .dx-diagram {
-    .dx-diagram-toolbar-wrapper:first-child {
+    .dx-diagram-toolbar-wrapper {
         border-bottom: 1px solid @IOS7_BORDER;
     }
 
